tests/snapshots/examples_fixtures/type_system__TypeSystem__Collections.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/TypeSystem/Collections.flx
== compile ==
failed (module)
== diagnostics ==
--> compiler error[E024]: MODULE PATH MISMATCH

Module name `TypeSystem.Collections` doesn't match file path `examples/type_system/TypeSystem/Collections.flx`.

  --> examples/type_system/TypeSystem/Collections.flx:4:1
  |
4 | module TypeSystem.Collections {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
