tests/snapshots/examples_fixtures/type_system__TypeSystem__EffectsChain.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/TypeSystem/EffectsChain.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `TypeSystem.EffectsChain` doesn't match file path `examples/type_system/TypeSystem/EffectsChain.flx`.

  examples/type_system/TypeSystem/EffectsChain.flx:1:1
  |
1 | module TypeSystem.EffectsChain {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
