tests/snapshots/examples_fixtures/type_system__TypeSystem__GenericResultTree.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/TypeSystem/GenericResultTree.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `TypeSystem.GenericResultTree` doesn't match file path `examples/type_system/TypeSystem/GenericResultTree.flx`.

  examples/type_system/TypeSystem/GenericResultTree.flx:1:1
  |
1 | module TypeSystem.GenericResultTree {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
