tests/snapshots/examples_fixtures/type_system__TypeSystem__RealProgramBaseInterop.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/TypeSystem/RealProgramBaseInterop.flx
== compile ==
failed (module)
== diagnostics ==
--> compiler error[E024]: MODULE PATH MISMATCH

Module name `TypeSystem.RealProgramBaseInterop` doesn't match file path `examples/type_system/TypeSystem/RealProgramBaseInterop.flx`.

  --> examples/type_system/TypeSystem/RealProgramBaseInterop.flx:1:1
  |
1 | module TypeSystem.RealProgramBaseInterop {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
