tests/snapshots/examples_fixtures/type_system__TypeSystem__StrictPrivateHelpers.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/TypeSystem/StrictPrivateHelpers.flx
== compile ==
failed (module)
== diagnostics ==
Error[E024]: Module Path Mismatch

Module name `TypeSystem.StrictPrivateHelpers` doesn't match file path `examples/type_system/TypeSystem/StrictPrivateHelpers.flx`.

  examples/type_system/TypeSystem/StrictPrivateHelpers.flx:1:1
  |
1 | module TypeSystem.StrictPrivateHelpers {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
